--- a/Index.html
+++ b/Index.html
@@ -1,121 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML Quest: The Code Kingdom Adventure by SSA</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            padding: 20px;
-        }
-        .tutorial, .challenge, .feedback {
-            margin-top: 20px;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            background-color: #fff;
-        }
-        .hidden {
-            display: none;
-        }
-        .feedback.correct {
-            color: green;
-        }
-        .feedback.incorrect {
-            color: red;
-        }
-    </style>
+  <title>Stock Screener</title>
+  <style>
+    /* Add some basic styling to make the page look decent */
+    body {
+      font-family: Arial, sans-serif;
+    }
+    .container {
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 20px;
+      background-color: #f9f9f9;
+      border: 1px solid #ccc;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    .form-group {
+      margin-bottom: 20px;
+    }
+    .form-control {
+      width: 100%;
+      height: 40px;
+      padding: 10px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+    }
+    .btn {
+      background-color: #4CAF50;
+      color: #fff;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .btn:hover {
+      background-color: #3e8e41;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1>Welcome to HTML Quest: The Code Kingdom Adventure</h1>
-        <div class="tutorial">
-            <h2>Tutorial: Creating a Simple Table</h2>
-            <p>In this tutorial, you'll learn how to create a basic HTML table.</p>
-            <pre>
-&lt;table&gt;
-    &lt;tr&gt;
-        &lt;th&gt;Name&lt;/th&gt;
-        &lt;th&gt;Type&lt;/th&gt;
-        &lt;th&gt;Rarity&lt;/th&gt;
-    &lt;/tr&gt;
-    &lt;tr&gt;
-        &lt;td&gt;Mandrake Root&lt;/td&gt;
-        &lt;td&gt;Herb&lt;/td&gt;
-        &lt;td&gt;Rare&lt;/td&gt;
-    &lt;/tr&gt;
-    &lt;tr&gt;
-        &lt;td&gt;Phoenix Feather&lt;/td&gt;
-        &lt;td&gt;Magical&lt;/td&gt;
-        &lt;td&gt;Very Rare&lt;/td&gt;
-    &lt;/tr&gt;
-&lt;/table&gt;
-            </pre>
-            <button onclick="startChallenge()">Start Challenge</button>
-        </div>
-        
-        <div class="challenge hidden">
-            <h2>Challenge: Build the Potion Inventory Table</h2>
-            <p>Use the template provided to create a table displaying the potion ingredients.</p>
-            <textarea id="codeInput" rows="10" cols="50"></textarea><br>
-            <button onclick="checkCode()">Submit</button>
-        </div>
-        
-        <div class="feedback hidden">
-            <h2>Feedback</h2>
-            <p id="feedbackText"></p>
-        </div>
+  <div class="container">
+    <h1>Stock Screener</h1>
+    <form>
+      <div class="form-group">
+        <label for="market-cap">Market Cap:</label>
+        <select id="market-cap" class="form-control">
+          <option value="">All</option>
+          <option value="small-cap">Small Cap (< ₹10,000 cr)</option>
+          <option value="mid-cap">₹10,000 cr - ₹50,000 cr</option>
+          <option value="large-cap">₹50,000 cr - ₹1,00,000 cr</option>
+          <option value="mega-cap">> ₹1,00,000 cr</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="sector">Sector:</label>
+        <select id="sector" class="form-control">
+          <option value="">All</option>
+          <option value="nifty50">Nifty 50</option>
+          <option value="nifty-next50">Nifty Next 50</option>
+          <option value="nifty-midcap-50">Nifty Midcap 50</option>
+          <option value="nifty-smallcap-50">Nifty Smallcap 50</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="price">Price:</label>
+        <input type="number" id="price" class="form-control" placeholder="Enter price range (e.g. 100-500)">
+      </div>
+      <div class="form-group">
+        <label for="volume">Volume:</label>
+        <input type="number" id="volume" class="form-control" placeholder="Enter volume range (e.g. 100000-500000)">
+      </div>
+      <div class="form-group">
+        <label for="dividend-yield">Dividend Yield:</label>
+        <input type="number" id="dividend-yield" class="form-control" placeholder="Enter dividend yield range (e.g. 2-5)">
+      </div>
+      <button class="btn" type="submit">Screen Stocks</button>
+    </form>
+    <div id="results">
+      <!-- Results will be displayed here -->
     </div>
 
+    <!-- Add JavaScript code to handle form submission and display results -->
     <script>
-        function startChallenge() {
-            document.querySelector('.tutorial').classList.add('hidden');
-            document.querySelector('.challenge').classList.remove('hidden');
-        }
+      // Get the form and results elements
+      const form = document.querySelector('form');
+      const resultsElement = document.querySelector('#results');
 
-        function checkCode() {
-            const codeInput = document.getElementById('codeInput').value;
-            const correctCode = `
-<table>
-    <tr>
-        <th>Name</th>
-        <th>Type</th>
-        <th>Rarity</th>
-    </tr>
-    <tr>
-        <td>Mandrake Root</td>
-        <td>Herb</td>
-        <td>Rare</td>
-    </tr>
-    <tr>
-        <td>Phoenix Feather</td>
-        <td>Magical</td>
-        <td>Very Rare</td>
-    </tr>
-</table>
-`.trim();
+      // Add event listener to form submission
+      form.addEventListener('submit', (e) => {
+        e.preventDefault();
 
-            const feedbackText = document.getElementById('feedbackText');
-            if (codeInput.trim() === correctCode) {
-                feedbackText.innerHTML = "Great job! You've built the table correctly.";
-                feedbackText.classList.add('correct');
-                feedbackText.classList.remove('incorrect');
-            } else {
-                feedbackText.innerHTML = "Hmm, something's not quite right. Check your code and try again.";
-                feedbackText.classList.add('incorrect');
-                feedbackText.classList.remove('correct');
-            }
+        // Get the user input values
+        const marketCap = document.querySelector('#market-cap').value;
+        const sector = document.querySelector('#sector').value;
+        const price = document.querySelector('#price').value;
+        const volume = document.querySelector('#volume').value;
+        const dividendYield = document.querySelector('#dividend-yield').value;
 
-            document.querySelector('.feedback').classList.remove('hidden');
-        }
-    </script>
-</body>
-</html>
+        // Make API call to retrieve stock data from NSE
+        const apiUrl = 'https://www.nseindia.com/api/stock-market-data';
+        fetch(apiUrl, {
