--- a/Index.html
+++ b/Index.html
@@ -100,3 +100,4 @@
         // Make API call to retrieve stock data from NSE
         const apiUrl = 'https://www.nseindia.com/api/stock-market-data';
         fetch(apiUrl, {
+</html>
