--- a/Index.html
+++ b/Index.html
@@ -1,103 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Stock Screener</title>
-  <style>
-    /* Add some basic styling to make the page look decent */
-    body {
-      font-family: Arial, sans-serif;
-    }
-    .container {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      background-color: #f9f9f9;
-      border: 1px solid #ccc;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    }
-    .form-group {
-      margin-bottom: 20px;
-    }
-    .form-control {
-      width: 100%;
-      height: 40px;
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-    }
-    .btn {
-      background-color: #4CAF50;
-      color: #fff;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .btn:hover {
-      background-color: #3e8e41;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>Stock Screener</h1>
-    <form>
-      <div class="form-group">
-        <label for="market-cap">Market Cap:</label>
-        <select id="market-cap" class="form-control">
-          <option value="">All</option>
-          <option value="small-cap">Small Cap (< ₹10,000 cr)</option>
-          <option value="mid-cap">₹10,000 cr - ₹50,000 cr</option>
-          <option value="large-cap">₹50,000 cr - ₹1,00,000 cr</option>
-          <option value="mega-cap">> ₹1,00,000 cr</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="sector">Sector:</label>
-        <select id="sector" class="form-control">
-          <option value="">All</option>
-          <option value="nifty50">Nifty 50</option>
-          <option value="nifty-next50">Nifty Next 50</option>
-          <option value="nifty-midcap-50">Nifty Midcap 50</option>
-          <option value="nifty-smallcap-50">Nifty Smallcap 50</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label for="price">Price:</label>
-        <input type="number" id="price" class="form-control" placeholder="Enter price range (e.g. 100-500)">
-      </div>
-      <div class="form-group">
-        <label for="volume">Volume:</label>
-        <input type="number" id="volume" class="form-control" placeholder="Enter volume range (e.g. 100000-500000)">
-      </div>
-      <div class="form-group">
-        <label for="dividend-yield">Dividend Yield:</label>
-        <input type="number" id="dividend-yield" class="form-control" placeholder="Enter dividend yield range (e.g. 2-5)">
-      </div>
-      <button class="btn" type="submit">Screen Stocks</button>
-    </form>
-    <div id="results">
-      <!-- Results will be displayed here -->
-    </div>
-
-    <!-- Add JavaScript code to handle form submission and display results -->
-    <script>
-      // Get the form and results elements
-      const form = document.querySelector('form');
-      const resultsElement = document.querySelector('#results');
-
-      // Add event listener to form submission
-      form.addEventListener('submit', (e) => {
-        e.preventDefault();
-
-        // Get the user input values
-        const marketCap = document.querySelector('#market-cap').value;
-        const sector = document.querySelector('#sector').value;
-        const price = document.querySelector('#price').value;
-        const volume = document.querySelector('#volume').value;
-        const dividendYield = document.querySelector('#dividend-yield').value;
-
-        // Make API call to retrieve stock data from NSE
-        const apiUrl = 'https://www.nseindia.com/api/stock-market-data';
-        fetch(apiUrl, {
+    <head>
+        <title>Example</title>
+    </head>
+    <body>
+        <p>This is an example of a simple HTML page with one paragraph.</p>
+    </body>
 </html>
